working on edit career, fixed regex to extract letters and remove white spaces for data-target in modals

--- a/frontend/src/components/EditEventItem/EditEventItem.css
+++ b/frontend/src/components/EditEventItem/EditEventItem.css
@@ -1,4 +1,4 @@
-.editEventButtonsContainer{
+.editButtonsContainer{
     display:flex;
     flex-direction: row;
     align-content: center;
