--- a/frontend/src/components/EditEvents/EditEvents.css
+++ b/frontend/src/components/EditEvents/EditEvents.css
@@ -1,4 +1,4 @@
-#createEventsContainer{
+.editContainer{
     display: flex;
     flex-direction: column;
     align-content: center;
